# Heart_disease_classification

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
artifacts/: preprocessor.pkl  test.csv  test_arr.csv  train.csv  train_arr.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
model/: best_model.joblib
model_evaluation/: evaluation_report.csv  shap_values_with_features.csv
notebook/: EDA.ipynb  balance_heart_data.csv  shap_explain.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: path_config.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py  shap_explanation.py
src/pipeline/: train_pipeline.py
